# webcamoid

./: CMakeLists.txt
libAvKys/: CMakeLists.txt
libAvKys/Demo/: CMakeLists.txt  install.cpp  main.cpp  main.h  uninstall.cpp
libAvKys/Lib/: CMakeLists.txt
libAvKys/Lib/src/: akelement.cpp  akunit.cpp
libAvKys/Plugins/: CMakeLists.txt
libAvKys/Plugins/ACapsConvert/: CMakeLists.txt
libAvKys/Plugins/ACapsConvert/src/ffmpegsw/: CMakeLists.txt
libAvKys/Plugins/DesktopCapture/: CMakeLists.txt
libAvKys/Plugins/DesktopCapture/src/qtscreen/: CMakeLists.txt
libAvKys/Plugins/MultiSrc/: CMakeLists.txt
libAvKys/Plugins/MultiSrc/src/: multisrcelement.cpp
libAvKys/Plugins/MultiSrc/src/ffmpeg/: CMakeLists.txt
libAvKys/Plugins/MultiSrc/src/ffmpeg/src/: mediasourceffmpeg.cpp  videostream.cpp
libAvKys/Plugins/VirtualCamera/: CMakeLists.txt
libAvKys/Plugins/VirtualCamera/src/: virtualcameraelement.cpp
libAvKys/Plugins/VirtualCamera/src/VCamUtils/: CMakeLists.txt
libAvKys/Plugins/VirtualCamera/src/cmio/: CMakeLists.txt
libAvKys/Plugins/VirtualCamera/src/cmio/Assistant/: CMakeLists.txt
libAvKys/Plugins/VirtualCamera/src/cmio/VCamIPC/: CMakeLists.txt
libAvKys/Plugins/VirtualCamera/src/cmio/VirtualCamera/: CMakeLists.txt
libAvKys/Plugins/VirtualCamera/src/dshow/: CMakeLists.txt
libAvKys/Plugins/VirtualCamera/src/dshow/Assistant/: CMakeLists.txt
libAvKys/Plugins/VirtualCamera/src/dshow/Assistant/src/: main.cpp
libAvKys/Plugins/VirtualCamera/src/dshow/PlatformUtils/: CMakeLists.txt
libAvKys/Plugins/VirtualCamera/src/dshow/VCamIPC/: CMakeLists.txt
libAvKys/Plugins/VirtualCamera/src/dshow/VCamIPC/src/: ipcbridge.cpp
libAvKys/Plugins/VirtualCamera/src/dshow/VirtualCamera/: CMakeLists.txt
libAvKys/Plugins/VirtualCamera/src/dshow/VirtualCamera/src/: pin.cpp
libAvKys/Plugins/VirtualCamera/src/dshow/src/: cameraoutdshow.cpp
libAvKys/Plugins/VirtualCamera/src/ffmpeg/: CMakeLists.txt
libAvKys/Plugins/VirtualCamera/src/v4l2sys/: CMakeLists.txt
libAvKys/Plugins/VirtualCamera/src/v4l2sys/VCamIPC/: CMakeLists.txt
libAvKys/Tests/vcamwin/: vcamwin.pro
