set(CMIO_PLUGINS_DAL_PATH "/Library/CoreMediaIO/Plug-Ins/DAL")
set(CMIO_PLUGINS_DAL_PATH_L ${CMIO_PLUGINS_DAL_PATH})
set(CMIO_DAEMONS_PATH "~/Library/LaunchAgents")
set(CMIO_PLUGIN_NAME "AkVirtualCamera")
set(CMIO_PLUGIN_NAME_L ${CMIO_PLUGIN_NAME})
set(CMIO_PLUGIN_ASSISTANT_NAME "AkVCamAssistant")
set(CMIO_PLUGIN_ASSISTANT_NAME_L ${CMIO_PLUGIN_ASSISTANT_NAME})
set(CMIO_PLUGIN_DEVICE_PREFIX "/akvcam/video")
set(CMIO_PLUGIN_VENDOR "Webcamoid Project")
set(CMIO_PLUGIN_PRODUCT "AkVirtualCamera")

message(STATUS "************* ${CMIO_PLUGINS_DAL_PATH_L}")

add_definitions(-DCMIO_PLUGINS_DAL_PATH="${CMIO_PLUGINS_DAL_PATH}")
add_definitions(-DCMIO_PLUGINS_DAL_PATH_L=L"${CMIO_PLUGINS_DAL_PATH_L}")
add_definitions(-DCMIO_DAEMONS_PATH="${CMIO_DAEMONS_PATH}")
add_definitions(-DCMIO_PLUGIN_NAME="${CMIO_PLUGIN_NAME}")
add_definitions(-DCMIO_PLUGIN_NAME_L=L"${CMIO_PLUGIN_NAME_L}")
add_definitions(-DCMIO_PLUGIN_ASSISTANT_NAME="${CMIO_PLUGIN_ASSISTANT_NAME}")
add_definitions(-DCMIO_PLUGIN_ASSISTANT_NAME_L=L"${CMIO_PLUGIN_ASSISTANT_NAME_L}")
add_definitions(-DCMIO_PLUGIN_DEVICE_PREFIX="${CMIO_PLUGIN_DEVICE_PREFIX}")
add_definitions(-DCMIO_PLUGIN_VENDOR="${CMIO_PLUGIN_VENDOR}")
add_definitions(-DCMIO_PLUGIN_PRODUCT="${CMIO_PLUGIN_PRODUCT}")


set(LIBRARY_OUTPUT_PATH ${LIBRARY_OUTPUT_PATH}/submodules/${PLUGIN_NAME})
set(CMIO_BASE_INCLUDES ${CMAKE_CURRENT_SOURCE_DIR} CACHE INTERNAL "doc string")

add_subdirectory(VCamIPC)
add_subdirectory(Assistant)
add_subdirectory(VirtualCamera)
