set(SUBMMODULE_NAME "dshow")
message(STATUS "Building ${PLUGIN_NAME} : ${SUBMMODULE_NAME} submodule.")

SET(LIBRARY_OUTPUT_PATH ${LIBRARY_OUTPUT_PATH}/submodules/${PLUGIN_NAME})

#Very important to get .lib files
SET(CMAKE_WINDOWS_EXPORT_ALL_SYMBOLS TRUE)

find_package(Qt5Core REQUIRED)

set(DSHOW_PLUGIN_NAME "AkVirtualCamera")
set(DSHOW_PLUGIN_ASSISTANT_NAME "AkVCamAssistant")
set(DSHOW_PLUGIN_ASSISTANT_DESCRIPTION "Webcamoid virtual camera service")
set(DSHOW_PLUGIN_DESCRIPTION "Webcamoid Virtual Camera")
set(DSHOW_PLUGIN_DESCRIPTION_EXT "Central service for communicating between virtual cameras clients and servers")
set(DSHOW_PLUGIN_DEVICE_PREFIX "/akvcam/video")
set(DSHOW_PLUGIN_VENDOR "Webcamoid Project")
set(DSHOW_PLUGIN_ARCH "x64")


add_definitions(-DDSHOW_PLUGIN_NAME="${DSHOW_PLUGIN_NAME}")
add_definitions(-DDSHOW_PLUGIN_NAME_L=L"${DSHOW_PLUGIN_NAME}")
add_definitions(-DDSHOW_PLUGIN_ASSISTANT_NAME="${DSHOW_PLUGIN_ASSISTANT_NAME}")
add_definitions(-DDSHOW_PLUGIN_ASSISTANT_NAME_L=L"${DSHOW_PLUGIN_ASSISTANT_NAME}")
add_definitions(-DDSHOW_PLUGIN_ASSISTANT_DESCRIPTION="${DSHOW_PLUGIN_ASSISTANT_DESCRIPTION}")
add_definitions(-DDSHOW_PLUGIN_ASSISTANT_DESCRIPTION_L=L"${DSHOW_PLUGIN_ASSISTANT_DESCRIPTION}")
add_definitions(-DDSHOW_PLUGIN_DESCRIPTION="${DSHOW_PLUGIN_DESCRIPTION}")
add_definitions(-DDSHOW_PLUGIN_DESCRIPTION_L=L"${DSHOW_PLUGIN_DESCRIPTION}")
add_definitions(-DDSHOW_PLUGIN_DESCRIPTION_EXT="${DSHOW_PLUGIN_DESCRIPTION_EXT}")
add_definitions(-DDSHOW_PLUGIN_DESCRIPTION_EXT_L=L"${DSHOW_PLUGIN_DESCRIPTION_EXT}")
add_definitions(-DDSHOW_PLUGIN_DEVICE_PREFIX="${DSHOW_PLUGIN_DEVICE_PREFIX}")
add_definitions(-DDSHOW_PLUGIN_DEVICE_PREFIX_L=L"${DSHOW_PLUGIN_DEVICE_PREFIX}")
add_definitions(-DDSHOW_PLUGIN_VENDOR="${DSHOW_PLUGIN_VENDOR}")
add_definitions(-DDSHOW_PLUGIN_VENDOR_L=L"${DSHOW_PLUGIN_VENDOR}")
add_definitions(-DDSHOW_PLUGIN_ARCH_L=L"${DSHOW_PLUGIN_ARCH}")
add_definitions(-DQT_DEBUG)

include_directories(
    ${AVKYS_PLUGIN_INCLUDES}
    ${CMAKE_CURRENT_SOURCE_DIR}
)

add_subdirectory(PlatformUtils)
add_subdirectory(VCamIPC)
add_subdirectory(Assistant)
add_subdirectory(VirtualCamera)




